# leanBench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
results/: 2026-04-24T10-57-40Z__a0805c1f4c.json  2026-04-27T05-39-50Z__de06d564e9.json  2026-04-27T06-45-24Z__a0805c1f4c.json  2026-04-27T08-55-02Z__de06d564e9.json  2026-04-28T07-23-46Z__6dd7bdf4d4.json  2026-04-28T07-24-47Z__a0805c1f4c.json  2026-04-28T07-25-40Z__7acfb79a54.json  2026-04-28T07-58-38Z__934230ae43.json  2026-04-28T07-59-54Z__cb2db40233.json  2026-04-28T09-04-11Z__187dd62dc8.json  2026-04-28T11-14-50Z__a0805c1f4c.json  2026-04-28T11-17-16Z__7acfb79a54.json  2026-04-28T11-19-35Z__6dd7bdf4d4.json  2026-04-28T11-34-23Z__cb2db40233.json  2026-04-28T12-03-31Z__934230ae43.json  2026-04-28T12-49-08Z__187dd62dc8.json  2026-04-28T18-48-55Z__a0805c1f4c.json  2026-04-28T18-51-43Z__6dd7bdf4d4.json  2026-04-28T18-51-53Z__7acfb79a54.json  2026-04-28T19-12-37Z__cb2db40233.json  2026-04-28T19-37-32Z__934230ae43.json  2026-04-28T21-08-08Z__187dd62dc8.json  2026-04-29T11-40-52Z__7acfb79a54.json  2026-04-29T11-51-21Z__6dd7bdf4d4.json  2026-04-29T11-52-42Z__a0805c1f4c.json  2026-04-29T12-16-03Z__cb2db40233.json  2026-04-29T13-12-33Z__934230ae43.json  2026-04-29T15-28-19Z__187dd62dc8.json  2026-04-30T11-30-40Z__a0805c1f4c.json  2026-04-30T11-31-03Z__7acfb79a54.json  2026-04-30T11-42-12Z__6dd7bdf4d4.json  2026-04-30T12-12-14Z__cb2db40233.json  2026-04-30T12-49-00Z__934230ae43.json  2026-04-30T15-51-48Z__187dd62dc8.json  2026-05-05T09-52-56Z__7acfb79a54.json  2026-05-05T09-59-05Z__6dd7bdf4d4.json  2026-05-05T10-09-08Z__a0805c1f4c.json  2026-05-05T10-30-37Z__cb2db40233.json  2026-05-05T11-02-19Z__934230ae43.json  2026-05-05T13-31-22Z__187dd62dc8.json  (+1 more)
runner/: bench.py  sampler.py  sysinfo.py
runner-rust/: Cargo.toml
runner-rust/.cargo/: config.toml
runner-rust/crates/lean-bench-runner/: Cargo.toml  build.rs
runner-rust/crates/lean-bench-runner/src/: main.rs  workloads.rs
schema/: v1.json
scripts/: build_index.py  dev_server.py  remote_bench.py
scripts/provisioners/: __init__.py  gcp.py
site/: app.js  index.html  run.html  style.css  topology.html  topology.js  trend.html  trend.js
