[project]
name = "lean-bench"
version = "0.1.0"
description = "Performance benchmarks for leanSig and leanMultisig across hardware."
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9",
]

[project.scripts]
# `uv run bench --label ...`  — path-style (`uv run runner/bench.py`) also works.
bench = "runner.bench:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["runner"]

[tool.uv]
# No dev deps today; add here (e.g. `ruff`, `pytest`) as they're needed.
