[project]
name = "lean-bench"
version = "0.1.0"
description = "Performance benchmarks for leanSig and leanMultisig across hardware."
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9",
]

[project.scripts]
# `uv run bench --label ...`  /  `uv run index`
# Path-style invocation (`uv run runner/bench.py`) still works too.
bench = "runner.bench:main"
index = "scripts.build_index:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["runner", "scripts"]

[tool.uv]
# No dev deps today; add here (e.g. `ruff`, `pytest`) as they're needed.
