[workspace]
resolver = "2"
members = ["crates/lean-bench-runner"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.87"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
# leanSig is on rand 0.9; leanMultisig xmss is on rand 0.10. They're
# incompatible types across versions, so we pull both with distinct names.
rand    = "0.10"
rand_09 = { package = "rand", version = "0.9" }
postcard = { version = "1.1", features = ["alloc"] }

# Pinned upstream SHAs. Bump deliberately.
# leanSig @ main as of 2026-04-23
leansig = { git = "https://github.com/leanEthereum/leanSig.git", rev = "16c660e93c60240de113fdca6be7455d6d7721a1" }

# leanMultisig @ main as of 2026-04-27
xmss            = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "4593360d" }
rec_aggregation = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "4593360d" }
backend         = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "4593360d" }

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1

# Local iteration: uncomment to point at sibling checkouts of the upstream
# repos alongside leanBench (i.e. under workspace/). Keep commented in
# committed code so fresh clones pull the pinned upstream SHAs.
#
# [patch."https://github.com/leanEthereum/leanSig.git"]
# leansig = { path = "../../leanSig" }
#
# [patch."https://github.com/leanEthereum/leanMultisig.git"]
# xmss            = { path = "../../leanMultisig/crates/xmss" }
# rec_aggregation = { path = "../../leanMultisig/crates/rec_aggregation" }
# backend         = { path = "../../leanMultisig/crates/backend" }
