[package]
name = "lean-bench-runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "lean-bench-runner"
path = "src/main.rs"

[dependencies]
leansig.workspace = true
xmss.workspace = true
rec_aggregation.workspace = true
backend.workspace = true

serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
rand.workspace = true
rand_09.workspace = true
postcard.workspace = true
